# induced-seismicity

./: .gitignore  CHANGES.md  GPU_HAL_DESIGN.md  MIGRATING_TO_MINITIM.md  PAPER_DRAFT.md  PAPER_METHODS_DRAFT.md  PAPER_RESULTS_DRAFT.md  README.md  ThePlan  add_geoscience_to_event_well_links_with_injection.py  add_geoscience_to_panel.py  analyze_cv_tmle_sweep.py  auto_ingest.py  benchmark_shift_7km.py  build_attribution_q.py  build_causal_forest.py  build_full_n_combined_test.py  build_hurdle_cf.py  build_well_day_panel.py  causal_core.py  causal_event_level_simple.csv  causal_poe_curves.py  causal_well_day_simple.csv  cf_targeted.py  check_if_mean.py  column_maps.py  compare_trim_results.py  cv_tmle_sweep_summary.csv  diagnose_cv_tmle.py  dowhy_ci.py  dowhy_ci_aggregated.py  dowhy_event_level_ci_20260410_192616.csv  dowhy_simple_all.py  dowhy_simple_all_aggregate.py  dowhy_well_day_ci_20260410_191959.csv  evalue_sensitivity.csv  evalue_sensitivity.py  filter_active_wells_before_events.py  filter_merge_events_and_nonevents.py  formation_sensitivity.py  (+161 more)
FUTURE_WORK/: LTMLE_FOLLOWUP_OUTLINE.md  METHODS_PAPER_DEFERRED.md  (+1 more)
gpu_hal/: LICENSE  README.md  __init__.py  backend.py  cd_gram.py  cd_logistic.py  cd_logistic_active_set.py  cv.py  cv_cd.py  cv_gram.py  fista.py  fista_gram.py  hal_fit.py  hurdle_hal.py  pyproject.toml
gpu_hal/tests/: benchmark_active_set_full_n.py  benchmark_real_hal.py  diagnose_3way.py  diagnose_along_path.py  diagnose_custom_grid.py  diagnose_hurdle_lambdas.py  diagnose_vs_hal9001.py  test_active_set_vs_full.py  test_cd_vs_sklearn.py  test_fista_vs_sklearn.py
(+9 files in other folders)
